--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ PORT = 8000
 
 MONGODB_URI= mongodb+srv://softwaredevbytes:softwaredevbytes@cluster0.ni8ny.mongodb.net/landingpages?retryWrites=true&w=majority
 MONGO_DB = landing_pages
+
+LOGIN_CODE = 992152
