--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ PORT = 8000
 MONGODB_URI= mongodb+srv://softwaredevbytes:softwaredevbytes@cluster0.ni8ny.mongodb.net/landingpages?retryWrites=true&w=majority
 MONGO_DB = landing_pages
 
-LOGIN_CODE = 992152
+LOGIN_CODE = code:992152
